# comment-app

./: README.md  pyproject.toml  requirements.local.txt
requirements/: requirements.local.txt  requirements.migration.txt  requirements.queue.txt  requirements.txt  requirements.web.txt
src/application/: layer.py
src/application/commands/create_comment/: command.py  handler.py
src/application/commands/delete_comment/: command.py  handler.py
src/application/commands/delete_product_comments/: command.py  handler.py
src/application/queries/get_product_comments/: handler.py  query.py  result.py
src/domain/comment/: entity.py  repository.py
src/domain/comment/exception/: author_name_must_contain_only_alphabetic_characters.py  comment_content_has_invalid_length.py
src/domain/shared/exception/: base.py
src/infrastructure/: layer.py
src/infrastructure/bus/command/: bus.py
src/infrastructure/bus/middleware/: transaction.py
src/infrastructure/database/relational/migrations/: env.py
src/infrastructure/database/relational/repository/: base.py  comment.py
src/interface/queue/: app.py  routes.py
src/interface/web/: app.py
src/interface/web/routes/comment/: routes.py
src/interface/web/routes/comment/contracts/output/: get_categories.py
src/interface/web/routes/comment/docs/: get_product_comments.py
tasks/: __init__.py  deps.py  packages.py
