[project]
name = "comment-app"
version = "0.0.1"
description = "The comment microservice application."
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
web = [
    "pydantic-settings",
    "pydantic",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "dw-shared-kernel",
    "fastapi",
    "uvicorn",
]
queue = [
    "pydantic-settings",
    "pydantic",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "dw-shared-kernel==0.2.0",
    "faststream[rabbit,cli]",
]
migration = [
    "pydantic-settings",
    "pydantic",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "dw-shared-kernel==0.2.0",
]
local = [
    "pytest",
    "ipython",
    "invoke",
    "ruff",
    "pre-commit",
]

[tool.ruff]
fix=true
unsafe-fixes = true
line-length = 120
indent-width = 4
exclude = [
    "venv",
    ".git",
    "__pycache__",
]
target-version = "py313"

[tool.ruff.lint]
ignore = ["N818"]
select = [
    "F",
    "E",
    "W",
    "N",
    "A",
    "COM",
    "PIE",
    "T20",
    "ARG",
    "ERA",
    "FAST",
]

[tool.ruff.lint.per-file-ignores]
"tasks/*" = ["T201", "ARG001"]
"src/infrastructure/database/migrations/env.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
